tests/analyzer/valid/0005_well_structured.tj
def main() -> void {
    return
}

def helper(x: int) -> int {
    return x + 1
}

def utility(a: int, b: int) -> int {
    return a + b
}
